--- a/about.html
+++ b/about.html
@@ -24,21 +24,28 @@
                     <h2>Creative <span>Visual</span>  Designs</h2>
                 </div>
 
-                <nav>
+                <nav class="nav">
                     <ul>
-                        <li> <a href="index.html"> Home </a> </li>
-                        <li> <a class="active" href="about.html"> About </a> </li>
+                        <li> <a class="active" href="index.html"> Home </a> </li>
+                        <li> <a href="about.html"> About </a> </li>
                         <li> <a href="services.html"> Services </a> </li>
                         <li> <a href="updates.html"> Updates </a> </li>
                         <li> <a href="contact.html"> Contact </a> </li>
                     </ul>
                 </nav>
 
+                <div class="toggle__menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+
             </div>            
         </div>
     </header>
     <!-- Header ends here -->
 
+    
     <!-- About Me starts here -->
     <section class="aboutMeBanner">
         <div class="container">
@@ -51,14 +58,12 @@
                         <br><br>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, eveniet! Ea officia odio, quaerat illo unde quam beatae nesciunt eligendi esse consequuntur repudiandae odit veniam ratione nobis atque mollitia dolorum adipisci debitis quidem labore quos delectus in praesentium doloremque. Reiciendis provident cum qui ipsa quaerat praesentium maiores temporibus nobis dolor!
                     </p>
-                    <nav>
                         <ul>
                             <li> <a href=""><i class="fa-brands fa-facebook"></i></a>  </li>
                             <li> <a href=""><i class="fa-brands fa-twitter"></i></a> </li>
                             <li> <a href=""><i class="fa-brands fa-instagram"></i></a> </i></li>
                             <li> <a href=""><i class="fa-brands fa-youtube"></i></a> </li>
                         </ul>
-                    </nav>
                 </div>
                 <div class="aboutMe__img">
                     <img src="./img/aboutme.png" alt="">
