--- a/contact.html
+++ b/contact.html
@@ -24,21 +24,26 @@
                     <h2>Creative <span>Visual</span>  Designs</h2>
                 </div>
 
-                <nav>
+                <nav class="nav">
                     <ul>
-                        <li> <a href="index.html"> Home </a> </li>
+                        <li> <a class="active" href="index.html"> Home </a> </li>
                         <li> <a href="about.html"> About </a> </li>
                         <li> <a href="services.html"> Services </a> </li>
                         <li> <a href="updates.html"> Updates </a> </li>
-                        <li> <a class="active" href="contact.html"> Contact </a> </li>
+                        <li> <a href="contact.html"> Contact </a> </li>
                     </ul>
                 </nav>
+
+                <div class="toggle__menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
 
             </div>            
         </div>
     </header>
     <!-- Header ends here -->
-
     
     <!-- Contact starts here -->
     <section class="contactPage">
