--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
+    
     <title>Creative Visual Design</title>
 </head>
 
@@ -155,12 +156,7 @@
     </footer>
     <!-- Footer ends here -->
 
-
-
-
-
-
-
+    <script src="./js/script.js"></script>
 
 
 
