--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="stylesheet" href="./js/script.js">
 
     <title>Creative Visual Design</title>
 </head>
@@ -174,20 +175,14 @@
     </footer>
     <!-- Footer ends here -->
 
-    <!-- yawa -->
+   
+    <script src="./js/script.js"></script>
 
 
 
     <script>
 
-        const nav = document.querySelector(".nav");
-        const toggleMenu = document.querySelector(".toggle__menu");
 
-
-        toggleMenu.addEventListener("click", ()=>{
-            toggleMenu.classList.toggle("open");
-            nav.classList.toggle("open");
-        })
     </script>
 
 
