--- a/services.html
+++ b/services.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-
+    <link rel="stylesheet" href="./js/script.js">
+    
     <title>Creative Visual Design</title>
 </head>
 
@@ -146,6 +147,11 @@
         </div>
     </footer>
     <!-- Footer ends here -->
+
+
+    
+    <script src="./js/script.js"></script>
+
 </body>
 
 </html>
