--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footerWrapper">
-                <nav>
+                <div class="footer__icons">
                     <ul>
                         <li> <a href=""><i class="fa-brands fa-facebook"></i></a>  </li>
                         <li> <a href=""><i class="fa-brands fa-twitter"></i></a> </li>
@@ -166,8 +166,8 @@
                         <li> <a href=""><i class="fa-brands fa-youtube"></i></a> </li>
                         <li> <a href=""><i class="fa-solid fa-envelope"></i></a> </li>
                     </ul>
+                </div>
                 <p>Baloc Road, Brgy. San Ignacio, San Pablo City Laguna 4000</p>
-                </nav>
                 <p class="copyright">©CREATIVEVISUALDESIGNS 2022</p>
             </div>
 
