--- a/about.html
+++ b/about.html
@@ -66,9 +66,8 @@
                             <li> <a href=""><i class="fa-brands fa-youtube"></i></a> </li>
                         </ul>
                 </div>
-                <div class="aboutMe__img">
-                    <img src="./img/aboutme.png" alt="">
-                </div>
+                <img src="./img/aboutme.png" alt="">
+                
             </div>
         
             <div class="arrow"><a href="#trends"><i class="fa-solid fa-chevron-down"></i></a></div>
@@ -139,7 +138,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footerWrapper">
-                <nav>
+                <div class="footer__icons">
                     <ul>
                         <li> <a href=""><i class="fa-brands fa-facebook"></i></a>  </li>
                         <li> <a href=""><i class="fa-brands fa-twitter"></i></a> </li>
@@ -147,8 +146,8 @@
                         <li> <a href=""><i class="fa-brands fa-youtube"></i></a> </li>
                         <li> <a href=""><i class="fa-solid fa-envelope"></i></a> </li>
                     </ul>
+                </div>
                 <p>Baloc Road, Brgy. San Ignacio, San Pablo City Laguna 4000</p>
-                </nav>
                 <p class="copyright">©CREATIVEVISUALDESIGNS 2022</p>
             </div>
 
