--- a/updates.html
+++ b/updates.html
@@ -171,11 +171,11 @@
     </section>
     <!-- Contact Us end here -->
 
-    <!-- Footer starts here -->
-    <footer class="footer">
+     <!-- Footer starts here -->
+     <footer class="footer">
         <div class="container">
             <div class="footerWrapper">
-                <nav>
+                <div class="footer__icons">
                     <ul>
                         <li> <a href=""><i class="fa-brands fa-facebook"></i></a>  </li>
                         <li> <a href=""><i class="fa-brands fa-twitter"></i></a> </li>
@@ -183,8 +183,8 @@
                         <li> <a href=""><i class="fa-brands fa-youtube"></i></a> </li>
                         <li> <a href=""><i class="fa-solid fa-envelope"></i></a> </li>
                     </ul>
+                </div>
                 <p>Baloc Road, Brgy. San Ignacio, San Pablo City Laguna 4000</p>
-                </nav>
                 <p class="copyright">©CREATIVEVISUALDESIGNS 2022</p>
             </div>
 
