--- a/contact.html
+++ b/contact.html
@@ -49,9 +49,10 @@
     <!-- Contact starts here -->
     <section class="contactPage">
         <div class="container">
+            
+            <h1>Contact</h1>
             <div class="contactPage__wrapper">
                 <div class="contact__details">
-                    <h1>Contact</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quis voluptatum non modi voluptate assumenda! Nesciunt, rem velit! Veritatis, iste!</p>
 
                     <div class="sns-icons">
@@ -99,7 +100,8 @@
     <!-- Contact ends here -->
 
     <!-- Footer starts here -->
-    <footer class="footer">
+    <footer class="footer fixedFooter">
+        <footer class="footer ">
         <div class="container">
             <div class="footerWrapper">
                 <div class="footer__icons">
