--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,11 @@
 
                 <nav class="nav">
                     <ul>
-                        <li> <a class="active" href="index.html"> Home </a> </li>
+                        <li> <a href="index.html"> Home </a> </li>
                         <li> <a href="about.html"> About </a> </li>
                         <li> <a href="services.html"> Services </a> </li>
                         <li> <a href="updates.html"> Updates </a> </li>
-                        <li> <a href="contact.html"> Contact </a> </li>
+                        <li> <a class="active" href="contact.html"> Contact </a> </li>
                     </ul>
                 </nav>
 
